Fixed z-index progress bar modal

--- a/src/styles/aboutme.scss
+++ b/src/styles/aboutme.scss
@@ -178,7 +178,7 @@
 .progress-bar {
   position: relative;
   width: 100%;
-  z-index: 10;
+  z-index: 0;
   top: 0;
   background-color: theme($websiteTheme, backgroundSurface);
 }
